cswTests has node_frequency_test

--- a/cswEngine_nb.ipynb
+++ b/cswEngine_nb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 559,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -20,6 +20,8 @@
     "from numpy import random\n",
     "\n",
     "from cswEngine import *\n",
+    "from cswMturk import *\n",
+    "import cswTests\n",
     "%load_ext autoreload\n",
     "%reload_ext autoreload\n",
     "%autoreload 2"
@@ -27,130 +29,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 749,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "RFC_bag = get_RFC_bag('subject and victim')\n",
-    "exp = Exp(RFC_bag)\n",
-    "node_seq,RFC = exp.gen_path()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 754,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "making 3 scripts with 5 stories to:\n",
-      " /Users/abeukers/wd/csw/experiments/task_scripts/\n"
-     ]
-    }
-   ],
-   "source": [
-    "from cswMturk import write_N_mturk_taskscripts\n",
-    "write_N_mturk_taskscripts(3,5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 752,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "subject-Adam_victim-Bill\n",
-      "subject-Adam_victim-Silvia\n",
-      "subject-Olivia_victim-Silvia\n",
-      "subject-Olivia_victim-Bill\n"
-     ]
-    }
-   ],
-   "source": [
-    "for RFC in RFC_bag:\n",
-    "  print(RFC)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 748,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for role,filler in RFC.items():\n",
-    "  role,filler['name']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 738,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BEGIN\n",
-      "{'subject': {'name': 'Adam', 'violent': 'True'}, 'victim': {'name': 'Silvia', 'violent': 'True', 'emotion': 'rage2', 'yell': 'I hate coffee2!', 'type': 'doctor'}, 'setting': {'name': \"Joe's coffee shop\"}, 'drink1': {'name': 'black tea'}, 'drink2': {'name': 'coffee'}, 'drink3': {'name': 'black tea'}, 'dessert': {'name': 'cookie'}}\n",
-      "CUTLINE\n",
-      "CUTBACK\n",
-      "SUBJECTSTARES\n",
-      "XSTARE\n",
-      "DRINKSPLASH\n",
-      "{'subject': {'name': 'Adam', 'violent': 'True'}, 'victim': {'name': 'Silvia', 'violent': 'True', 'emotion': 'rage2', 'yell': 'I hate coffee2!', 'type': 'doctor'}, 'setting': {'name': \"Joe's coffee shop\"}, 'drink1': {'name': 'black tea'}, 'drink2': {'name': 'coffee'}, 'drink3': {'name': 'black tea'}, 'dessert': {'name': 'cookie'}}\n",
-      "POLICEORDERS\n",
-      "{'subject': {'name': 'Adam', 'violent': 'True'}, 'victim': {'name': 'Silvia', 'violent': 'True', 'emotion': 'rage2', 'yell': 'I hate coffee2!', 'type': 'doctor'}, 'setting': {'name': \"Joe's coffee shop\"}, 'drink1': {'name': 'black tea'}, 'drink2': {'name': 'coffee'}, 'drink3': {'name': 'black tea'}, 'dessert': {'name': 'cookie'}}\n",
-      "LOVEJUICE\n",
-      "END\n"
-     ]
-    }
-   ],
-   "source": [
-    "node_seq,RFC = exp.gen_path()\n",
-    "for n in node_seq:\n",
-    "  if n.type == 'story_node':\n",
-    "    print(n.name)\n",
-    "  if n.type == 'fillerQ':\n",
-    "    print(n)\n",
-    "  if n.type == 'transQ':\n",
-    "    print(n.true_RFC)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 708,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[NodeObj.BEGIN,\n",
-       " NodeObj.STEPFOOT,\n",
-       " NodeObj.EXCUSEME,\n",
-       " NodeObj.SHOVE,\n",
-       " transQ_SHOVE-XSTARE_SHOVE-YELL,\n",
-       " NodeObj.XSTARE,\n",
-       " fillerQ_XSTARE-DRINKSPLASH_XSTARE-DRINKSPLASH,\n",
-       " NodeObj.DRINKSPLASH,\n",
-       " transQ_DRINKSPLASH-POLICEORDERS_DRINKSPLASH-BARISTAORDERS,\n",
-       " NodeObj.POLICEORDERS,\n",
-       " transQ_POLICEORDERS-LOVEJUICE_POLICEORDERS-HATECOFFEE,\n",
-       " NodeObj.LOVEJUICE,\n",
-       " NodeObj.END]"
+       "{1: 0.3, 2: 0.1, 3: 0.2}"
       ]
      },
-     "execution_count": 708,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "node_seq"
+    "from collections import Counter\n",
+    "c = Counter([1,2,1,1,3,3])\n",
+    "{k:v/10 for k,v in c.items()}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 3), (3, 2), (2, 1)]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.most_common()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp = cswEngine.Exp()\n",
+    "node_seq_L,RFC_L = exp.gen_k_paths(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "of the rfcs where adam was subject\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cond = 'subject','name','Adam'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "if [True,False,True]:\n",
+    "  print('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'BARISTAORDERS': 0.32,\n",
+       " 'BEGIN': 1.0,\n",
+       " 'CUTBACK': 0.8,\n",
+       " 'CUTLINE': 0.8,\n",
+       " 'DESERTCRUMBLE': 0.2,\n",
+       " 'DRINKSPLASH': 0.8,\n",
+       " 'END': 1.0,\n",
+       " 'EXCUSEME': 0.2,\n",
+       " 'HATECOFFEE': 0.19,\n",
+       " 'LOVEJUICE': 0.81,\n",
+       " 'POLICEORDERS': 0.68,\n",
+       " 'SHOVE': 0.8,\n",
+       " 'STEPFOOT': 0.2,\n",
+       " 'SUBJECTSTARES': 0.2,\n",
+       " 'XSTARE': 0.8,\n",
+       " 'YELL': 0.2}"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cond = \"subject\",'name','Adam'\n",
+    "n,nr = cswTests.count_node_rfc(5000,cond)\n",
+    "n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'BARISTAORDERS': 0.33,\n",
+       " 'BEGIN': 1.0,\n",
+       " 'CUTBACK': 0.21,\n",
+       " 'CUTLINE': 0.21,\n",
+       " 'DESERTCRUMBLE': 0.8,\n",
+       " 'DRINKSPLASH': 0.2,\n",
+       " 'END': 1.0,\n",
+       " 'EXCUSEME': 0.79,\n",
+       " 'HATECOFFEE': 0.8,\n",
+       " 'LOVEJUICE': 0.2,\n",
+       " 'POLICEORDERS': 0.67,\n",
+       " 'SHOVE': 0.2,\n",
+       " 'STEPFOOT': 0.79,\n",
+       " 'SUBJECTSTARES': 0.8,\n",
+       " 'XSHOVE': 0.81,\n",
+       " 'YELL': 0.19}"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cond = \"subject\",'name','Olivia'\n",
+    "n,nr = cswTests.count_node_rfc(5000,cond)\n",
+    "n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp = Exp()\n",
+    "node_seq,RFC = exp.gen_path()\n",
+    "for n in node_seq:\n",
+    "  if n.type == 'story_node':\n",
+    "    print(n.name)\n",
+    "  if n.type == 'fillerQ':\n",
+    "    print(n.false_RFC)\n",
+    "  if n.type == 'transQ':\n",
+    "    print(n.true_RFC)"
    ]
   }
  ],
